<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#748CAB"
    tools:context=".feedback">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/description"
        android:textColor="#FFFDFD"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />


    <EditText
        android:id="@+id/feedbackForm"
        android:layout_width="326dp"
        android:layout_height="303dp"
        android:background="@drawable/edit_text_border"
        android:gravity="top|left"
        android:hint="@string/what_disease_where_is_the_pain_etc"
        android:inputType="textMultiLine"
        android:lines="10"
        android:scrollHorizontally="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359"
        tools:ignore="RtlHardcoded,TextContrastCheck" />

    <Button
        android:id="@+id/submit"
        android:layout_width="121dp"
        android:layout_height="58dp"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/submit"
        android:textColor="#1F2751"
        android:textSize="16sp"
        app:backgroundTint="#EDE1E1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackForm"
        app:layout_constraintVertical_bias="0.217" />

</androidx.constraintlayout.widget.ConstraintLayout>